// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return a logger with info: An advisory has been found... 1`] = `
[
  [
    "An advisory has been found. You can suppress this in .yarn-audit-competec/suppressions.js",
    {
      "findings": "test",
      "githubAdvisoryId": "id",
    },
  ],
  [
    "An advisory has been found. You can suppress this in .yarn-audit-competec/suppressions.js",
    {
      "findings": "test",
      "githubAdvisoryId": "GHSA-hjp8-2cm3-cc45",
    },
  ],
]
`;

exports[`should return a logger with info: Suppression has expired... 1`] = `
[
  [
    "An advisory has been found. You can suppress this in .yarn-audit-competec/suppressions.js",
    {
      "findings": "test",
      "githubAdvisoryId": "id",
    },
  ],
  [
    "An advisory has been found. You can suppress this in .yarn-audit-competec/suppressions.js",
    {
      "findings": "test",
      "githubAdvisoryId": "GHSA-hjp8-2cm3-cc45",
    },
  ],
  [
    "Suppression has expired!",
    {
      "findings": "test",
      "githubAdvisoryId": "GHSA-hjp8-2cm3-cc45",
    },
  ],
]
`;
